--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 asgiref==3.3.1
 Django==3.1.3
+django-extensions==3.0.9
+django-test-without-migrations==0.6
+python-decouple==3.3
 pytz==2020.4
 sqlparse==0.4.1
