--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.3.1
+dj-database-url==0.5.0
+dj-static==0.0.6
 Django==3.1.3
 django-extensions==3.0.9
 django-test-without-migrations==0.6
