--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-static==0.0.6
 Django==3.1.3
 django-extensions==3.0.9
 django-test-without-migrations==0.6
+lahar-python==0.1.0
 python-decouple==3.3
 pytz==2020.4
 sqlparse==0.4.1
